Set up ASP.NET Identity for future JWT authentication
Startup.cs configures ASP.NET Identity for the server. This is a bare setup of the framework with dbcontext and JWT configuration and migrations. The solution now also holds the Finance.Application and Finance.Infrastructure assemblies for separability.

--- a/server/src/Finance.Web/appsettings.Development.json
+++ b/server/src/Finance.Web/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "Identity": "Server=127.0.0.1;Port=5432;Database=Finance.Identity;User Id=postgres;Password=postgres;"
+  },
+  "Token": {
+    "Issuer": "localhost",
+    "Audience": "localhost",
+    "Secret": "f2nqiDlgq0bdSbyfkA-1RdMZm9uVA-q5"
   }
 }
